--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+.A {
+  background-image: url("https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials.jpg");
   text-align: center;
+  background-size: cover;
+  /* background-repeat: no-repeat; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.input {
+  margin-top: 50px;
+  background-color: #3cbc8d;
   color: white;
+  width: 200px;
+  height: 30px;
+  text-align: center;
+  font-family: serif;
+  font-size: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.list {
+  margin-top: 50px;
+  text-align: center;
+  color: white;
+  font-family: serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  color: white;
+  background-color: rgb(66, 172, 119);
+  height: 50px;
 }
